Se añade funcionalidad Typewriter a TributePage y SurveyForm

--- a/SurveyForm/index.html
+++ b/SurveyForm/index.html
@@ -23,7 +23,12 @@
   </nav>
   <div class="container">
     <header class="header">
-      <h1 id="title" class="title-center mt-4">Usos de la Tecnología en Tiempos Libres</h1>
+      <!-- <h1 id="title" class="title-center mt-4">Usos de la Tecnología en Tiempos Libres</h1> -->
+      <h1 id="title">
+        <a href="" class="typewrite title-center mt-4" data-period="2000" data-type='[ "Usos de la Tecnología en Tiempos Libres" ]'>
+          <span class="wrap"></span>
+        </a>
+      </h1>
       <p id="description" class="text-center">"El gran motor del cambio es la tecnología". Alvin Toffler</p>
     </header>
 
@@ -81,6 +86,6 @@
       </div>
     </form>
   </div>
-
 </body>
+<script src="js/main.js"></script>
 </html>
