--- a/TributePage/index.html
+++ b/TributePage/index.html
@@ -13,6 +13,7 @@
   <!-- Styles -->
   <link href="css/Style.css" rel="stylesheet" type="text/css">
   <!-- Styles -->
+
   <title>Tribute Page - Academia Geek</title>
 </head>
 
@@ -26,7 +27,11 @@
     </nav>
 
     <div class="titulo">
-      <h1 id="title">Albert Einstein</h1>
+      <h1 id="title">
+        <a href="" class="typewrite" data-period="2000" data-type='[ "Albert Einstein" ]'>
+          <span class="wrap"></span>
+        </a>
+      </h1>
       <p>El científico más importante, conocido y popular del siglo XX</p>
     </div>
 
@@ -62,4 +67,5 @@
 
   </main>
 </body>
+<script src="js/main.js"></script>
 </html>
