--- a/EjercicioCiclismo/index.html
+++ b/EjercicioCiclismo/index.html
@@ -10,47 +10,232 @@
   integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <!-- BOOTSTRAP -->
 
+  <!-- GOOGLE FONTS ICON -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+  rel="stylesheet">
+  <!-- GOOGLE FONTS ICON -->
+
+  <!-- AWESOME FONT -->
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+  integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+  <!-- AWESOME FONT -->
+
   <!-- STYLE -->
   <link href="css/Style.css" rel="stylesheet" type="text/css">
   <!-- STYLE -->
 
   <title>Administración Ciclista</title>
 </head>
-<body>
-  <section class="container-fluid">
+<body class="container boxed-layout">
+  <section class="container-fluid mt-3">
     <header>
       <article class="row">
-        <div class="col-md-2">
-          <img class="logo" src="images/bicicleta-logo.png" alt="">
+        <div class="col-lg-12 col-md-11 col-11">
+          <nav class="navbar navbar-expand-lg navbar-light navB">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-1">
+                  <a class="navbar-brand" href="#"><img class="img-fluid img-thumbnail logo" src="images/bicicleta-logo.png" alt=""></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                  aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              </div>
+              <div class="col-md-7">
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup"></div>
+                <ul class="navbar-nav mr-auto">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Ciclistas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contactenos</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-md-4">
+                <form class="d-flex">
+                  <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit"><span class="material-icons">
+                    search
+                  </span></button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </article>
+  </header>
+
+  <main class="row mt-1">
+    <div class="container">
+      <div id="carouselExampleCaptions" class="carousel slide mt-2" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="img-fluid mx-auto d-block banner" src="images/baner-ciclista.jpg" alt="">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Disfruta el Camino</h5>
+              <p>Pedalea hasta tu destino y con toda la energia.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card text-center mt-3 mb-3">
+        <div class="card-header">
+          <ul class="nav nav-tabs card-header-tabs" id="tabs-ciclista" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link active" data-bs-toggle="tab" data-bs-target="#registro" aria-controls="registro" role="tab" href="#myTabContent">Registro de Tiempos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-bs-toggle="tab" data-bs-target="#promedio" aria-controls="promedio" role="tab" href="#myTab">Promedios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tiempos" aria-controls="tiempos" role="tab" href="#">Mejores Tiempos</a>
+            </li>
+          </ul>
+        </div>
+        <div class="card-body">
+          <div class="tab-content" id="content-tab">
+            <div class="tab-pane fade show active" id="registro" role="tabpanel" aria-labelledby="registro-tab">
+              <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                <button class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                  <span class="material-icons">add</span>
+                </button>
+              </form>
+              <div class="table-responsive">
+                <table class="table table-bordered mt-2">
+                  <thead>
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Corredor</th>
+                      <th scope="col">Carrera 1</th>
+                      <th scope="col">Carrera 2</th>
+                      <th scope="col">Carrera 4</th>
+                      <th scope="col">Carrera 5</th>
+                      <th scope="col">Acciones</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>1</td>
+                      <td>Diego Gómez</td>
+                      <td>90 min</td>
+                      <td>90 min</td>
+                      <td>90 min</td>
+                      <td>90 min</td>
+                      <td>
+                        <a href="#"><span class="material-icons">remove_red_eye</span></a>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+
+            </div>
+            <div class="tab-pane fade show" id="promedio" role="tabpanel" aria-labelledby="promedio-tab">
+              <div class="table-responsive">
+                <table class="table table-bordered mt-2">
+                  <thead>
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Corredor</th>
+                      <th scope="col">Promedio</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>1</td>
+                      <td>Diego Gómez</td>
+                      <td>90 min</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div class="tab-pane fade show" id="tiempos" role="tabpanel" aria-labelledby="tiempos-tab">
+
+            </div>
+          </div>
         </div>
 
-        <div class="col-md-7">
-          <nav>
-            <ul>
-              <li>Inicio</li>
-              <li>Ciclistas</li>
-              <li>Contactenos</li>
-            </ul>
-          </nav>
+        <!-- Modal -->
+        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropLabel">Registro de Tiempo</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+
+              <div class="modal-body">
+                <h5>Datos del Corredor</h5>
+                <div class="row align-items-center">
+                  <div class="col-2">
+                    <label for="name" class="col-form-label">Nombre:</label>
+                  </div>
+                  <div class="col-10">
+                    <input type="text" id="name" class="form-control" placeholder="Nombre del Corredor">
+                  </div>
+                </div>
+                <hr>
+                <h5>Registro de Tiempos</h5>
+                <div class="row align-items-center">
+                  <div class="col-5">
+                    <label for="carrera1" class="col-form-label">Carrera 1 (en minutos):</label>
+                  </div>
+                  <div class="col-7 mb-2">
+                    <input type="number" id="carrera1" class="form-control" placeholder="Tiempo Carrera 1" requied>
+                  </div>
+                  <div class="col-5">
+                    <label for="carrera2" class="col-form-label">Carrera 2 (en minutos):</label>
+                  </div>
+                  <div class="col-7 mb-2">
+                    <input type="number" id="carrera2" class="form-control" placeholder="Tiempo Carrera 2" requied>
+                  </div>
+                  <div class="col-5">
+                    <label for="carrera3" class="col-form-label">Carrera 3 (en minutos):</label>
+                  </div>
+                  <div class="col-7 mb-2">
+                    <input type="number" id="carrera3" class="form-control" placeholder="Tiempo Carrera 3" requied>
+                  </div>
+                  <div class="col-5">
+                    <label for="carrera4" class="col-form-label">Carrera 4 (en minutos):</label>
+                  </div>
+                  <div class="col-7 mb-2">
+                    <input type="number" id="carrera4" class="form-control" placeholder="Tiempo Carrera 4" requied>
+                  </div>
+                  <div class="col-5">
+                    <label for="carrera5" class="col-form-label">Carrera 5 (en minutos):</label>
+                  </div>
+                  <div class="col-7 mb-2">
+                    <input type="number" id="carrera5" class="form-control" placeholder="Tiempo Carrera 5" requied>
+                  </div>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Salir</button>
+                <button type="button" class="btn btn-outline-success">Guardar</button>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+    </div>
+  </main>
 
-        <div class="col-md-3">
-          <input type="search" name="" value="">
-        </div>
-      </article>
-    </header>
-
-    <main>
-
-    </main>
-
-    <footer>
-
-    </footer>
-  </section>
+  <footer class="justify-content-center align-items-center d-flex mb-2">
+    Copyright © 2021 | Medellín - Antioquia, Colombia |<i class="fab fa-github ms-2 me-2"></i>|<i class="fab fa-facebook ms-2 me-2"></i>
+    |<i class="fab fa-twitter ms-2 me-2"></i>
+  </footer>
+</section>
 </body>
 <!-- JS -->
-<script src="js/main.js"></script>
+<script src="js/main.js" type="module"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 <!-- JS -->
