--- a/Product-Landing_Page/index.html
+++ b/Product-Landing_Page/index.html
@@ -9,7 +9,7 @@
   integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <!-- BOOTSTRAP -->
   <!-- STYLE -->
-  <link href="css/Style.css" rel="stylesheet" type="text/css">
+  <link href="css/style.css" rel="stylesheet" type="text/css">
   <!-- STYLE -->
   <!-- AWESOME FONT -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
