--- a/Adopcion/index.html
+++ b/Adopcion/index.html
@@ -19,7 +19,7 @@
   <!-- BOOTSTRAP ICON -->
 
   <!-- STYLE -->
-  <link href="css/Style.css" rel="stylesheet" type="text/css">
+  <link href="css/style.css" rel="stylesheet" type="text/css">
   <!-- STYLE -->
   <title>Aplicación de Adopción</title>
 </head>
